# Autonomous-Robot-Navigation-in-Crowded-Warehouses

./: .clang-format  .gitignore  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
scripts/: generate_social_mpc.py  setup_env.sh
src/human_tracker/: CMakeLists.txt  package.xml
src/human_tracker/config/: human_tracker.rviz  human_tracker.yaml
src/human_tracker/include/human_tracker/: human_clusterer.hpp  kalman_tracker.hpp  lidar_preprocessor.hpp
src/human_tracker/launch/: human_tracker.launch.py
src/human_tracker/src/: human_clusterer.cpp  human_tracker_node.cpp  kalman_tracker.cpp  lidar_preprocessor.cpp
src/human_tracker/test/: test_kalman_tracker.cpp
src/simulation_bridge/: CMakeLists.txt  package.xml
src/social_mpc/: CMakeLists.txt  package.xml
src/social_mpc/include/social_mpc/: mpc_solver.hpp  robot_kinematics.hpp
src/social_mpc/src/: mpc_solver.cpp  robot_kinematics.cpp  social_mpc_node.cpp
src/social_mpc/test/: test_robot_kinematics.cpp
src/social_navigation_msgs/: CMakeLists.txt  package.xml
src/social_navigation_msgs/msg/: HumanArray.msg  HumanState.msg  SocialMpcDebug.msg
src/warehouse_navigation/: CMakeLists.txt  package.xml
src/warehouse_navigation/include/warehouse_navigation/: astar_planner.hpp
src/warehouse_navigation/src/: astar_planner.cpp  warehouse_nav_node.cpp
