<?xml version="1.0"?>
<package format="3">
  <name>simulation_bridge</name>
  <version>0.1.0</version>
  <description>Isaac Sim 6.1.0 launch scripts and configuration for social navigation</description>
  <maintainer email="mateuszoffc@gmail.com">mateusz</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>social_navigation_msgs</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
