cmake_minimum_required(VERSION 3.28)
project(warehouse_navigation)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_lifecycle REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(social_navigation_msgs REQUIRED)
find_package(Eigen3 3.4 REQUIRED NO_MODULE)
set(DEPS rclcpp rclcpp_lifecycle geometry_msgs nav_msgs tf2_ros social_navigation_msgs)
add_executable(warehouse_nav_node src/warehouse_nav_node.cpp src/astar_planner.cpp)
ament_target_dependencies(warehouse_nav_node ${DEPS})
target_include_directories(warehouse_nav_node PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_link_libraries(warehouse_nav_node Eigen3::Eigen)
install(TARGETS warehouse_nav_node DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY config launch maps DESTINATION share/${PROJECT_NAME})
ament_package()
